force-app/main/default/objects/Mortgage_History__c/Mortgage_History__c.object-meta.xml
<CustomObject>
    <label>Property Mortgage History</label>
    <nameField>
        <displayFormat>MH-{000}</displayFormat>
        <label>Mortgage  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Mortgage Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>