force-app/main/default/objects/Mortgage_History__c/fields/Borrower_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Borrower_s_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Borrower&apos;s Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Mortgage_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>