force-app/main/default/objects/Mortgage_History__c/fields/Previous_Borrower_s_Owner__c.field-meta.xml
<CustomField>
    <fullName>Previous_Borrower_s_Owner__c</fullName>
    <label>Previous Borrower&apos;s / Owner</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>